// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitGrid basic isLoading snapshot render 1`] = `
<ul
  className="sc-AxiKw gXXqCg spinner spinning"
>
  <li
    className="sc-AxjAm cYIHHO"
  >
    fake_singular1
    <aside>
      fake_plural1
    </aside>
  </li>
  <li
    className="sc-AxjAm cYIHHO"
  >
    fake_singular2
    <aside>
      fake_plural2
    </aside>
  </li>
</ul>
`;

exports[`UnitGrid basic snapshot render 1`] = `
<ul
  className="sc-AxiKw gXXqCg spinner"
>
  <li
    className="sc-AxjAm cYIHHO"
  >
    fake_singular1
    <aside>
      fake_plural1
    </aside>
  </li>
  <li
    className="sc-AxjAm cYIHHO"
  >
    fake_singular2
    <aside>
      fake_plural2
    </aside>
  </li>
</ul>
`;
